--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.12",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "framer-motion": "^12.23.26",
     "mysql2": "^3.16.0",
     "next": "16.1.0",
     "react": "19.2.3",
